fixed layout issues

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -16,7 +16,7 @@ body > .content {
   color: #D16ABF;
  }
 
- .icon{
+ .icon {
    padding: 0em 1em;
  }
 
@@ -141,4 +141,9 @@ body > .content {
 
 .jug-logo {
   height: 200px;
+}
+
+.button {
+  background-color: #D16ABF;
+  color: white;
 }
